# cobvid

./: .gitignore  AutoFlowST.py  BrickProfileBuilder.py  CMakeLists.txt  arm_move.py  bezier_bernstein.py  calculations_circula_path.py  cobvid.py  core.py  demo_berlin.py  move_sin.py  package.xml  setup.py
config/: command_gui_buttons_scene_ctrl_berlin.yaml  command_gui_buttons_service_ctrl.yaml
helper_scripts/: bezier_bernstein.py  calculations_circula_path.py  trajectory_goal_from_joint_states.py
launch/: dashboard_berlin.launch  dashboard_cobvid.launch  start_demo_berlin.launch
src/: ball_handling.py  cobvid.py  demo_berlin.py
src/cobvid/: CMakeLists.txt  command_gui_buttons.yaml  command_gui_buttons_scene_ctrl_berlin.yaml  command_gui_buttons_service_ctrl.yaml  core.py  dashboard.launch  dashboard_berlin.launch  dashboard_cobvid.launch  package.xml
trajectory_goal_data/: trajectory_goal_tf_circ_8.yaml  trajectory_goal_tf_cross.yaml  trajectory_goal_tf_holdball.yaml  trajectory_goal_tf_roll.yaml  trajectory_goal_tf_z.yaml
